--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,10 @@
         "pug-php/pug": "1 - 2",
         "pug/installer": "^0.1.3"
     },
-    "autoload": {
-        "psr-4": {
-            "Bkwld\\LaravelPug\\": "src/"
-        }
+    "require-dev": {
+        "phug/dev-tool": "^0.1.0"
     },
+    "minimum-stability": "dev",
     "license": "MIT",
     "authors": [
         {
@@ -21,6 +20,11 @@
             "email": "info@bukwild.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "Bkwld\\LaravelPug\\": "src/"
+        }
+    },
     "scripts": {
         "post-install-cmd": [
             "Pug\\Installer\\Installer::onAutoloadDump"
