Use phpunit instead of phug/dev-tool for compatibility reason

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@
 /.codeclimate.yml       export-ignore
 /*.md                   export-ignore
 /LICENSE                export-ignore
+/phpunit.xml            export-ignore
