--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,13 @@ install:
   - travis_retry composer update --no-interaction --prefer-stable
 
 script:
-  - vendor/bin/phug-dev check --report --ignore-tests --ignore-debug --coverage-php-version=5.6
+  - vendor/bin/phpunit --verbose --coverage-text --coverage-clover=coverage.xml
+
+after_script:
+  - vendor/bin/test-reporter --coverage-report coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 
 addons:
   code_climate:
