--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "pug/installer": "^0.1.3"
     },
     "require-dev": {
-        "phug/dev-tool": "^0.1.0"
+        "phpunit/phpunit": "^4.8 || ^5.7",
+        "phpunit/php-code-coverage": "^2.2 || ^4.0 || ^5.2",
+        "codeclimate/php-test-reporter": "^0.4.0"
     },
     "minimum-stability": "dev",
     "license": "MIT",
