--- a/composer.json
+++ b/composer.json
@@ -4,8 +4,8 @@
     "type": "library",
     "require": {
         "php": ">=5.4.0",
-        "illuminate/support": "4",
-        "illuminate/view": "4",
+        "illuminate/support": "4 - 5",
+        "illuminate/view": "4 - 5",
         "pug-php/pug": "1 - 2",
         "pug/installer": "^0.1.3"
     },
